--- a/addons/custom_addons/others/partner_report/views/report_partner_cash.xml
+++ b/addons/custom_addons/others/partner_report/views/report_partner_cash.xml
@@ -2,7 +2,7 @@
 <odoo>
     <data>
 
-                <template id="classic_report_saleorder_document">
+                <template id="cash_reciept_report">
                     <t t-if="o and 'company_id' in o">
                         <t t-set="company" t-value="o.company_id"></t>
                         <span>
