--- a/addons/custom_addons/others/partner_report/views/report_partner_cash.xml
+++ b/addons/custom_addons/others/partner_report/views/report_partner_cash.xml
@@ -1,49 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
-                <template id="partner_report.cash_reciept_report">
-                    <t t-if="o and 'company_id' in o">
-                        <t t-set="company" t-value="o.company_id"></t>
-                        <span>
-                    There is a company_id
-                    </span>
+                <template id="cash_reciept_report">
+                    <t t-call="web.html_container">
+                    <t t-foreach="docs" t-as="doc">
+                    <t t-call="web.external_layout">
+                    <h1> Hello !</h1>
                     </t>
-                    <t t-if="not o or not 'company_id' in o">
-                        <t t-set="company" t-value="res_company"></t>
                     </t>
-                   <div class="header">
-                <div class="row mt32 mb32">
-                    <div class="col-6">
-                        <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % to_text(company.logo)" style="max-height: 50px;" />
-                    </div>
-                    <div class="col-6 text-right" style="font:12px lucida-console,sans-serif !important;">
-                        <span t-field="company.partner_id" />
-                        <br/>
-                        <span t-field="company.partner_id.street" />
-                        <br/>
-                        <span t-field="company.partner_id.street2" />
-                        <br/>
-                        <span t-field="company.partner_id.city" />
-                        <br/>
-                        <span t-field="company.partner_id.country_id" />
-                        <br/>
-                        <span t-field="company.partner_id.vat" />
-                        <br/>
-                    </div>
-                </div>
-            </div>
-
-                <t t-call="web.external_layout">
-                    <t t-if="o.name">
-                    <span>
-                    There is a name
-                    </span>
-                    </t>
-                        <div class="page">
-                            <div class="oe_structure"/>
-                  
-                            <div class="oe_structure"/>
-                        </div>
                     </t>
                 </template>
 </data>
