--- a/addons/custom_addons/others/partner_report/views/partner_report.xml
+++ b/addons/custom_addons/others/partner_report/views/partner_report.xml
@@ -9,5 +9,13 @@
             file="partner_report.cash_reciept_report" 
             name="partner_report.cash_reciept_report" 
         />
+        <report 
+            id="Employee_cash_reciept_report"
+            string="Cash Reciept"
+            model="hr.employee" 
+            report_type="qweb-pdf"
+            file="partner_report.employee_cash_reciept_report" 
+            name="partner_report.employee_cash_reciept_report" 
+        />
     </data>
 </odoo>
