--- a/addons/custom_addons/others/partner_employee_report/views/partner_report.xml
+++ b/addons/custom_addons/others/partner_employee_report/views/partner_report.xml
@@ -6,16 +6,8 @@
             string="Cash Reciept"
             model="res.partner" 
             report_type="qweb-pdf"
-            file="partner_report.cash_reciept_report" 
-            name="partner_report.cash_reciept_report" 
-        />
-        <report 
-            id="Employee_cash_reciept_report"
-            string="Cash Reciept"
-            model="hr.employee" 
-            report_type="qweb-pdf"
-            file="partner_report.employee_cash_reciept_report" 
-            name="partner_report.employee_cash_reciept_report" 
+            file="partner_employee_report.cash_reciept_report" 
+            name="partner_employee_report.cash_reciept_report" 
         />
     </data>
 </odoo>
