--- a/addons/custom_addons/others/partner receipt print/report/partner_receipt_report_template.xml
+++ b/addons/custom_addons/others/partner receipt print/report/partner_receipt_report_template.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <template id="de_partner_ledger_pdf_report">
+    <template id="partner_receipt_pdf">
         <t t-call="web.html_container">
             <t t-call="web.external_layout">
                 <div class="page">
