--- a/addons/custom_addons/others/partner receipt print/report/partner_receipt_report.xml
+++ b/addons/custom_addons/others/partner receipt print/report/partner_receipt_report.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
-    <report id="partner_receipt_pdf"
+    <report id="partner_receipt"
             string="Partner Receipt"
             model="partner.receipt"
             report_type="qweb-pdf"
