--- a/addons/custom_addons/others/partner_receipt_report/report/partner_receipt_report_template.xml
+++ b/addons/custom_addons/others/partner_receipt_report/report/partner_receipt_report_template.xml
@@ -12,6 +12,8 @@
                     <t t-foreach="request.env['res.partner'].search([('id', '=', data['partner_id'])])" t-as="prd">
                         <h4><span t-field="prd.name"/></h4>
                     </t>
+                    <span t-esc="date" />
+                    <span t-esc="amount"/>
                      </div>
                 </div>
                     
