--- a/addons/custom_addons/others/de_partner_statement/views/partner_ledger_views.xml
+++ b/addons/custom_addons/others/de_partner_statement/views/partner_ledger_views.xml
@@ -7,18 +7,20 @@
         <field name="arch" type="xml">
             <form string="Partner Ledger">
                 <group>
-                    <group>
-                        <field name="start_date"/>
-                        <field name="partner_id"/>
-
-                    </group>
-                    <group>
-                        <field name="end_date"/>
-                        
-
-                    </group>
+                
+                <group>
+                    <field name="date"/>
                 </group>
-
+                <group>
+                    <field name="partner_id"/>
+                    <field name="amount"/>
+                </group>
+                
+                <group>
+                    <field name="from_account"/>
+                    <field name="to_account"/>
+                </group>
+                </group>
                 <footer>
                     <button name="print_report" type="object" string="Print" class="oe_highlight"/>
                     <button string="Cancel" class="btn btn-default" special="cancel"/>
