--- a/addons/custom_addons/others/purchase_report/reports/purchase_reports.xml
+++ b/addons/custom_addons/others/purchase_report/reports/purchase_reports.xml
@@ -2,12 +2,12 @@
 <odoo>
     <data>
         <report
-                id="report_purchase_vendor"
-                string="By Vendors"
-                model="vendor.purchase.report.wizard"
+                id="report_general_purchase"
+                string="General Purchase Report"
+                model="purchase.report.general"
                 report_type="qweb-pdf"
-                file="vendor_wise_purchase_report.purchase_report_vendor"
-                name="vendor_wise_purchase_report.purchase_report_vendor"
+                file="purchase_report.purchase_report_general"
+                name="purchase_report.purchase_report_general"
         />
     </data>
 </odoo>
