--- a/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
+++ b/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
@@ -73,7 +73,35 @@
                     
                       
                     <t t-foreach="data" t-as="order">
-                        <span> Hi </span>
+                    <t t-foreach="order[10]" t-as="line">
+                    <div>
+                    <span t-esc="order[0]" >
+                    <br/>
+                    <span t-esc="order[1]" >
+                    <br/>
+                    <span t-esc="order[4]" >
+                    <br/>
+                    <span t-esc="line[0]" >
+                    <br/>
+                    <span t-esc="line[1]" >
+                    <br/>
+                    <span t-esc="line[2]" >
+                    <br/>
+                    <span t-esc="order[2]" >
+                    <br/>
+                    <span t-esc="order[3]" >
+                    <br/>
+                    <span t-esc="order[6]" >
+                    <br/>
+                    <span t-esc="order[7]" >
+                    <br/>
+                    <span t-esc="order[8]" >
+                    <br/>
+                    <span t-esc="order[9]" >
+                    <br/>
+                    </div>
+                      <div> Lineee Endddddddddddddddddd</div>  
+                    </t>
                         
                     </t>
                       
