--- a/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
+++ b/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
@@ -69,7 +69,87 @@
                         </b>
                     </center>
                     <br/>
-                    
+                    <table class="table table-condensed" style="direction:rlt;">
+                    <thead>
+                    <th> رقم الأمر
+                    </th>
+                    <th> 
+                    التاريخ
+                    </th>
+                    <th>
+                    المورد 
+                    </th>
+                    <th>
+                    المنتج
+                    </th>
+                    <th>
+                    الكمية المطلوبة
+                    </th>
+                    <th>
+                    الكمية المستلمة
+                    </th>
+                    <th>
+                    اسم السائق
+                    </th>
+                    <th>
+                    رقم السيارة
+                    </th>
+                    <th>
+                    الإجمالي بدون ضرائب
+                    </th>
+                    <th>
+                    الضرائب
+                    </th>
+                    <th>
+                    الإجمالي
+                    </th>
+                    <th>
+                    </th>
+           </head>
+           
+           <tbody>
+           <t t-foreach="data" t-as="order" >
+           <tr t-foreach="order[10]" t-as="line" >
+           <td> 
+           <span t-esc="order[0]" />
+           </td>
+<td>
+<span t-esc="order[1]" />
+           </td>
+<td>
+<span t-esc="order[4]" />
+           </td>
+<td>
+<span t-esc="orderline[0]" />
+           </td>
+<td>
+<span t-esc="orderline[1]" />
+           </td>
+<td>
+<span t-esc="orderline[2]" />
+           </td>
+<td>
+<span t-esc="order[7]" />
+<span t-esc="order[9]" />
+           </td>
+<td>
+<span t-esc="order[8]" />
+           </td>
+<td>
+<span t-esc="orderline[3]" />
+           </td>
+<td>
+<span t-esc="orderline[4]" />
+           </td>
+<td>
+<span t-esc="orderline[5]" />
+           </td>
+           </tr>
+
+           </t>
+           </tbody>
+
+                    <table/>
                     
                       
                     <t t-foreach="data" t-as="order">
