--- a/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
+++ b/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
@@ -103,9 +103,8 @@
                     <th>
                     الإجمالي
                     </th>
-                    <th>
-                    </th>
-           </head>
+                    
+           </thead>
            
            <tbody>
            <t t-foreach="data" t-as="order" >
