--- a/addons/custom_addons/others/inventory_report/reports/inventory_report_general.xml
+++ b/addons/custom_addons/others/inventory_report/reports/inventory_report_general.xml
@@ -87,6 +87,9 @@
                     رقم السيارة
                     </th>
                     <th>
+                     رقم الأمر 
+                    </th>
+                    <th>
                   المخزن المُحول منه
                     </th>
                     <th>
