--- a/addons/partner_civil_id/views/partner_view.xml
+++ b/addons/partner_civil_id/views/partner_view.xml
@@ -13,4 +13,30 @@
         </field>
     </record>
 
+    <record id="view_extra_details" model="ir.ui.view">
+        <field name="name">partner.extra_details.inherit</field>
+        <field name="model">purchase.order</field>
+        <field name="type">form</field>
+        <field name="inherit_id" ref="purchase.purchase_order_form"/>
+        <field name="arch" type="xml">
+            <field name="partner_ref" position="after">
+                <field name="civil_id"/>
+                <field name="name" />
+                <field name="phone" />
+            </field>
+        </field>
+    </record>
+<record id="view_extra_details_invoice" model="ir.ui.view">
+        <field name="name">partner.extra_details.invoice.inherit</field>
+        <field name="model">account.invoice</field>
+        <field name="type">form</field>
+        <field name="inherit_id" ref="account.invoice_supplier_form"/>
+        <field name="arch" type="xml">
+            <field name="reference" position="after">
+                <field name="civil_id"/>
+                <field name="name" />
+                <field name="phone" />
+            </field>
+        </field>
+    </record>
 </odoo>
