--- a/addons/partner_civil_id/views/partner_view.xml
+++ b/addons/partner_civil_id/views/partner_view.xml
@@ -32,7 +32,7 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="account.invoice_supplier_form"/>
         <field name="arch" type="xml">
-            <field name="reference" position="after">
+            <field name="partner_id" position="after">
                 <field name="civil_id"/>
                 <field name="name" />
                 <field name="phone" />
