--- a/addons/partner_civil_id/views/partner_view.xml
+++ b/addons/partner_civil_id/views/partner_view.xml
@@ -30,7 +30,7 @@
         <field name="name">partner.extra_details.invoice.inherit</field>
         <field name="model">account.invoice</field>
         <field name="type">form</field>
-        <field name="inherit_id" ref="account.invoice_supplier_form"/>
+        <field name="inherit_id" ref="account.invoice_form"/>
         <field name="arch" type="xml">
             <field name="payment_term_id" position="after">
                 <field name="civil_id"/>
