--- a/addons/custom_addons/others/sale_report/reports/sale_report_general.xml
+++ b/addons/custom_addons/others/sale_report/reports/sale_report_general.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <template id="purchase_report_general">
+    <template id="sale_report_general">
        <t t-call="web.html_container">
               
 
