--- a/addons/custom_addons/others/sale_report/reports/sale_report_general.xml
+++ b/addons/custom_addons/others/sale_report/reports/sale_report_general.xml
@@ -7,7 +7,7 @@
                 <style>
                     .table, .table td, .table th {
                       border: 1px solid #ddd;
-                      text-align: left;
+                      text-align: right;
                     }
 
                     .table {
@@ -17,7 +17,7 @@
                     }
 
                     .table th, .table td {
-                      padding: 10px;
+                      padding: 5px;
                     }
 
                     .salesperson{
