--- a/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
+++ b/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
@@ -71,6 +71,11 @@
                         </b>
                     </center>
                     <br/>
+                    <t t-set="t_ordered" t-value="0" />
+                    <t t-set="t_delivered" t-value="0" />
+                    <t t-set="t_untax" t-value="0" />
+                    <t t-set="t_tax" t-value="0" />
+                    <t t-set="t_total" t-value="0" />
                     <table class="table table-condensed" style="direction:rtl;">
                     <thead>
                     <th> رقم الأمر
@@ -98,6 +103,9 @@
                     </th>
                     <th>
                     رقم السيارة
+                    </th>
+                    <th>
+                    سعر الوحدة
                     </th>
                     <th>
                     الإجمالي بدون ضرائب
@@ -132,9 +140,12 @@
            </td>
 <td>
 <span t-esc="order['quantity']" />
+<t t-set="t_ordered" t-value="t_ordered+order['quantity']" />
+
            </td>
 <td>
 <span t-esc="order['received']" />
+<t t-set="t_delivered" t-value="t_delivered+order['received']" />
            </td>
 <td>
 <span t-esc="order['driver']" />
@@ -143,15 +154,35 @@
 <span t-esc="order['car']" />
 </td>
 <td>
+<span t-esc="order['unit_price']" />
+</td>
+
+<td>
 <span t-esc="order['price_sub']" />
+<t t-set="t_untax" t-value="t_untax+order['price_sub']" />
            </td>
 <td>
 <span t-esc="order['price_tax']" />
+<t t-set="t_tax" t-value="t_tax+order['price_tax']" />
            </td>
 <td>
 <span t-esc="order['price_total']" />
+<t t-set="t_total" t-value="t_total+order['price_total']" />
 </td>
            </tr>
+           <tr>
+            
+            <td colspan="6"> الاجمالي  </td>
+            <td> <span t-esc="t_ordered" /> </td>
+            <td> <span t-esc="t_delivered" /> </td> 
+            <td colspan="3"> </td>
+            <td><span t-esc="t_untax" /> </td>
+            <td> <span t-esc="t_tax" /> </td>
+            <td> <span t-esc="t_total" /> </td>
+            <td colspan="2"> </td>            
+
+           </tr>
+
            </tbody>
                     </table>               
                 </div>
