--- a/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
+++ b/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
@@ -118,7 +118,9 @@
                     <th>
                     الإجمالي
                     </th>
-                    
+                    <th>
+                    رقم الفاتورة
+                    </th>
            </thead>
            
            <tbody>
@@ -158,7 +160,6 @@
 <td>
 <span t-esc="order['unit_price']" />
 </td>
-
 <td>
 <span t-esc="order['price_sub']" />
 <t t-set="t_untax" t-value="t_untax+order['price_sub']" />
@@ -171,7 +172,11 @@
 <span t-esc="order['price_total']" />
 <t t-set="t_total" t-value="t_total+order['price_total']" />
 </td>
+<td>
+<span t-esc="order['invoice']" />
+</td>
            </tr>
+           
            <tr>
             
             <td colspan="5"> الاجمالي  </td>
