--- a/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
+++ b/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
@@ -186,13 +186,18 @@
             <td><span t-esc="t_untax" /> </td>
             <td> <span t-esc="t_tax" /> </td>
             <td> <span t-esc="t_total" /> </td>
-                     
+            <td colspan="1"> </td>         
 
            </tr>
 
            </tbody>
-                    </table>               
+                    </table>     
+                <t t-set="user" t-value="user"/>
+                <span t-esc="user" /> 
+                <span t-esc="time" />
+
                 </div>
+
             </t>
 
     </template>
