--- a/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
+++ b/addons/custom_addons/others/purchase_report/reports/purchase_report_general.xml
@@ -193,8 +193,9 @@
            </tbody>
                     </table>     
                 <t t-set="user" t-value="user"/>
-                <span t-esc="user" /> 
-                <span t-esc="time" />
+                <span t-esc="user.name" /> 
+               <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/>   
+
 
                 </div>
 
