--- a/addons/custom_addons/others/sale_report/reports/sale_report_general.xml
+++ b/addons/custom_addons/others/sale_report/reports/sale_report_general.xml
@@ -206,6 +206,10 @@
            </tbody>
                     </table>             
                 </div>
+                <t t-set="user" t-value="user"/>
+               <span t-esc="user.name" /> 
+               <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/>   
+
             </t>
 
     </template>
