--- a/addons/custom_addons/accounting/sale_agent_commission/reports/sale_report_general.xml
+++ b/addons/custom_addons/accounting/sale_agent_commission/reports/sale_report_general.xml
@@ -227,7 +227,12 @@
            </tbody>
                     </table> 
                      </t>         
+                
                 </div>
+<t t-set="user" t-value="user"/>
+               <span t-esc="user.name" /> 
+               <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/>   
+
             </t>
     </template>
 </odoo>
