--- a/addons/custom_addons/others/inventory_report/reports/inventory_report_general.xml
+++ b/addons/custom_addons/others/inventory_report/reports/inventory_report_general.xml
@@ -147,6 +147,10 @@
                     </table>
                      
                 </div>
+                <t t-set="user" t-value="user"/>
+               <span t-esc="user.name" /> 
+               <span t-esc="context_timestamp(datetime.datetime.now()).strftime('%Y-%m-%d %H:%M')"/>   
+
             </t>
 
     </template>
