--- a/addons/custom_addons/others/sale_report/reports/sale_report_general.xml
+++ b/addons/custom_addons/others/sale_report/reports/sale_report_general.xml
@@ -79,7 +79,8 @@
                     
                     <table class="table table-condensed" style="direction:rtl;">
                     <thead>
-                    <th> رقم الأمر
+                    <th> 
+                    رقم الأمر
                     </th>
                     <th>
                     رقم الفاتورة
@@ -164,7 +165,6 @@
 <span t-esc="order['source']" />
 </td>
 <td>
-<td>
 <span t-esc="order['driver']" />
            </td>
 <td>
@@ -179,6 +179,7 @@
 <td>
 <span t-esc="order['unit_price']" />
 </td>
+<td>
 <span t-esc="order['quantity']" />
 <t t-set="t_ordered" t-value="t_ordered+order['quantity']" />
 
