--- a/addons/custom_addons/accounting/sale_agent_commission/reports/sale_report_general.xml
+++ b/addons/custom_addons/accounting/sale_agent_commission/reports/sale_report_general.xml
@@ -251,7 +251,8 @@
 </td>
 
 <td>
- بلح 
+ <span t-esc="order['commission']" />
+<t t-set="total" t-value="total+order['commission']" />
  </td>
            </tr>
      <tr>
